Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5073

Compilation failure QtOpenGL when Opengl ES is used on Qt for Windows CE

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.0
    • 4.6.0
    • None
    • None
    • 504ac5668c7308dc67233ed8589eeadcd23e7cdd

      Test case:

      • run configure.exe as follows adding any required -I -L options to support libGLES_CM.lib:
        configure -platform win32-msvc2008 -xplatform wincewm60professional-msvc2008 -fast -opengl-es-cm -cetest
      • note that there is a link error relating to undefined symbol such as QEglContext::getDisplay() which is provided by QtGui

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            isdale Keith Isdale (closed Nokia identity) (Inactive)
            isdale Keith Isdale (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes