Compilation failure QtOpenGL when Opengl ES is used on Qt for Windows CE

Enable building egl/qegl_wince.cpp when a wince* mkspec is used
Add "egl" to QT_CONFIG when any of the OpenGL ES variants is used

Task-number: QTBUG-5073
Reviewed-by: Trond Kjernåsen